# paper-summarizer

./: .dockerignore  .env.example  .eslintrc.json  .gitignore  .pre-commit-config.yaml  AGENTS.md  BRUTAL_HONEST_REVIEW.md  CODE_QUALITY_REPORT.md  Dockerfile  README.md  alembic.ini  app.py  docker-compose.yml  package.json  pyproject.toml  railway.toml  run.py  setup.py
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_jobs.py  0003_add_foreign_keys.py  0004_user_settings.py
ops/grafana/dashboards/: paper_summarizer.json
ops/grafana/provisioning/dashboards/: dashboards.yml
ops/prometheus/: prometheus.yml
paper_summarizer/: __init__.py  config.py
paper_summarizer/core/: __init__.py  setup.py  summarizer.py
paper_summarizer/web/: __init__.py  app.py  auth.py  config.py  db.py  deps.py  job_helpers.py  metrics.py  middleware.py  models.py  observability.py  ratelimit.py  routes.py  schemas.py  security.py  validation.py  worker.py
paper_summarizer/web/routes/: __init__.py  evidence.py  export.py  html.py  jobs.py  summaries.py  synthesis.py
paper_summarizer/web/static/: analytics.js  archive.js  auth.js  base.js  batch.js  library.js  login.js  main.js  settings.js  style.css  synthesis.js
paper_summarizer/web/templates/: analytics.html  archive.html  base.html  batch.html  index.html  library.html  login.html  settings.html  synthesis.html
scripts/: backup_db.py
src/: __init__.py  summarizer.py
static/: style.css
templates/: index.html
tests/: __init__.py  config.py  conftest.py  test_api_endpoints.py  test_integration.py  test_jobs.py  test_routes.py  test_summarizer.py  test_synthesis_helpers.py  test_validation_and_ratelimit.py  test_worker.py
