[tool.poetry]
name = "paper-summarizer"
version = "0.1.0"
description = "A web application for summarizing research papers"
authors = ["gr8monk3ys"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
flask = ">=2.0.0"
nltk = "^3.8.0"
sumy = "^0.11.0"
beautifulsoup4 = ">=4.9.3"
requests = ">=2.25.0"
gensim = "^4.3.3"
PyPDF2 = ">=3.0.0"
python-docx = ">=0.8.11"
together = ">=0.2.0"
transformers = ">=4.30.0"
torch = ">=2.0.0"
sentencepiece = ">=0.1.99"
protobuf = ">=3.20.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
