[project]
name = "paper-summarizer"
version = "0.1.0"
description = "A web application for summarizing research papers"
authors = [{name = "gr8monk3ys"}]
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "flask>=2.0.0",
    "nltk>=3.8.0",
    "sumy>=0.11.0",
    "beautifulsoup4>=4.9.3",
    "requests>=2.25.0",
    "gensim>=4.3.3",
    "PyPDF2>=3.0.0",
    "python-docx>=0.8.11",
    "together>=0.2.0",
    "transformers>=4.30.0",
    "torch>=2.0.0",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
