[project]
name = "paper-summarizer"
version = "0.1.0"
description = "A web application for summarizing research papers"
authors = [{name = "gr8monk3ys"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "alembic>=1.13.0",
    "arq>=0.26.0",
    "prometheus-client>=0.20.0",
    "sentry-sdk>=2.8.0",
    "sqlmodel>=0.0.21",
    "uvicorn[standard]>=0.30.0",
    "reportlab>=4.2.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    "psycopg[binary]>=3.2.0",
    "jinja2>=3.1.0",
    "python-multipart>=0.0.9",
    "beautifulsoup4>=4.9.3",
    "httpx>=0.27.0",
    "pypdf>=4.0.0",
    "python-docx>=0.8.11",
    "together>=0.2.0",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
local = [
    "nltk>=3.8.0",
    "sumy>=0.11.0",
    "gensim>=4.3.3",
    "transformers>=4.30.0",
    "torch>=2.0.0; sys_platform != 'darwin' or platform_machine != 'x86_64'",
    "sentencepiece>=0.1.99",
    "protobuf>=3.20.0",
]

[dependency-groups]
dev = [
    "httpx>=0.27.0",
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
]

[tool.pytest.ini_options]
addopts = "--cov=paper_summarizer --cov-report=term-missing --cov-fail-under=70"

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true


[[tool.mypy.overrides]]
module = [
    "paper_summarizer.web.job_helpers",
]
disallow_untyped_defs = true
warn_return_any = true

# Modules with SQLAlchemy dynamic attribute access and other third-party
# type issues not covered by ignore_missing_imports. Suppressed to keep
# CI green without requiring sqlalchemy-stubs or manual type: ignore comments.
[[tool.mypy.overrides]]
module = [
    "paper_summarizer.core.summarizer",
    "paper_summarizer.web.validation",
    "paper_summarizer.web.deps",
    "paper_summarizer.web.worker",
    "paper_summarizer.web.routes.html",
    "paper_summarizer.web.routes.synthesis",
    "paper_summarizer.web.routes.summaries",
    "paper_summarizer.web.routes.evidence",
]
ignore_errors = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
